新增标识敌方上一步位置+点击音效

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>等待玩家接入</h3>
     <ul>
     </ul>
+    <audio src="./step.wav" style="display: none"></audio>
     <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./socket.js"></script>
 </body>
